Fixes an issue where the content of the footer would overflow

--- a/scss/_footer.scss
+++ b/scss/_footer.scss
@@ -73,7 +73,8 @@
   .footer {
     width: 100%;
     height: auto;
-    margin: 10px 20px;
+    margin: 10px 0;
+    padding: 0 20px;
     font-size: 17px;
 
     flex-direction: row;
